adds css script js

--- a/game_1630/templates/app/base.html
+++ b/game_1630/templates/app/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>1630 - Thirty Years War</title>
 
+    <link rel="shortcut icon" type="image/png" href="{% static 'app/favicon.ico' %}"/>
     <link rel="stylesheet" href="{% static 'app/style.css' %}">
 
     <script src="{% static 'app/script.js' %}"></script>
