--- a/game_1630/templates/app/base.html
+++ b/game_1630/templates/app/base.html
@@ -2,21 +2,22 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>1630 - Thirty Years War</title>
+	<head>
+		<meta charset="UTF-8" />
+		<title>1630 - Thirty Years War</title>
 
-    <link rel="shortcut icon" type="image/png" href="{% static 'app/favicon.ico' %}"/>
-    <link rel="stylesheet" href="{% static 'app/style.css' %}">
+		<link rel="shortcut icon" type="image/png" href="{% static 'app/favicon.ico' %}" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="{% static 'app/style.css' %}" />
 
-    <script src="{% static 'app/script.js' %}"></script>
-
-
-</head>
-<body>
-    {% block page %}
-
-    {% endblock %}
-
-</body>
+		<script src="{% static 'app/script.js' %}"></script>
+	</head>
+	<body>
+		{% block page %} {% endblock %}
+	</body>
 </html>
