--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -4,7 +4,7 @@
 	<div class="banner">
 		<div class="nav-bar">
 			<div class="logo">
-				<img src="/static/app/assets//images/logo.svg" alt="" />
+				<img src="/static/app/assets/svgs/logo.svg" alt="" />
 			</div>
 			<ul>
 				<li><a href="#">Kickstarter</a></li>
@@ -44,7 +44,7 @@
 		</div>
 	</div>
 	<section class="kick-starter">
-		<span><img class="img-fluid" src="/static/app/assets/svg/kick-starter.svg" alt="Kickstarter" /></span>
+		<span><img class="img-fluid" src="/static/app/assets/svgs/kick-starter.svg" alt="Kickstarter" /></span>
 		<div class="video-wrapper">
 			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/tgbNymZ7vqY?playlist=tgbNymZ7vqY&loop=1"> </iframe>
 		</div>
@@ -127,6 +127,128 @@
 					of Germany and Austria in varying light and weather conditions.
 				</p>
 			</div>
+		</div>
+	</section>
+	<section class="faction">
+		<h3>Factions</h3>
+		<p>We have two playable factions in the game, the <span>Imperial Holy Roman Empire</span> and the <span>Swedish Empire</span></p>
+		<div class="faction-card-wrapper">
+			<div class="faction-img">
+				<img class="img-fluid" src="/static/app/assets/svgs/yellow-faction.svg" alt="">
+			</div>
+			<div class="faction-img">
+				<img class="img-fluid" src="/static/app/assets/svgs/blue-faction.svg" alt="">
+			</div>
+		</div>
+	</section>
+	<section class="Screenshots">
+		<h3>Screenshots</h3>
+		<div class="images-wrapper">
+			<div class="image">
+				<img src="/static/app/assets/images/ss-1.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/ss-2.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/ss-1.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/ss-2.png" alt="">
+			</div>
+		</div>
+		<div class="images-wrapper">
+			<div class="image">
+				<img src="/static/app/assets/images/ss-1.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/ss-2.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/ss-1.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/ss-2.png" alt="">
+			</div>
+		</div>
+	</section>
+	<section class="artworks">
+		<h3>Artworks</h3>
+		<div class="images-wrapper">
+			<div class="image">
+				<img src="/static/app/assets/images/artwork-1.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/artwork-2.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/artwork-1.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/artwork-2.png" alt="">
+			</div>
+		</div>
+		<div class="images-wrapper">
+			<div class="image">
+				<img src="/static/app/assets/images/artwork-1.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/artwork-2.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/artwork-1.png" alt="">
+			</div>
+			<div class="image">
+				<img src="/static/app/assets/images/artwork-2.png" alt="">
+			</div>
+		</div>
+	</section>
+	<section class="music">
+		<h3>Music</h3>
+		<div class="audio-wrapper">
+			<div class="audio">
+				<div class="music-name">Thirty Years Of War</div>
+				<div class="music-theme">Theme music</div>
+				<div class="audio-player">
+					<div class="controls">
+						<div class="play-container">
+							<div class="toggle-play play"></div>
+						</div>
+						<div class="timeline">
+							<div class="progress"></div>
+						</div>
+						<div class="time">
+							<div class="length"></div>
+						</div>
+						<div class="volume-container">
+							<div class="volume-button">
+								<div class="volume icono-volumeMedium"></div>
+							</div>
+							<div class="volume-slider">
+								<div class="volume-percentage"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="newsletter">
+		<h3>Newsletter</h3>
+		<p>First 100 subscribers get free access to the 1630 - The Thirty Years’ War closed beta tests.</p>
+		<form action="">
+			<div class="form-group">
+				<input type="email" class="form-control" placeholder="Email address" />
+			</div>
+			<div>
+				<button type="submit" class="btn btn-primary">Subscribe</button>
+			</div>
+		</form>
+	</section>
+	<section class="pressKit">
+		<h3>Press Kit</h3>
+		<div class="text-center">
+			<button type="submit" class="btn btn-primary">Download - 75mb</button>
 		</div>
 	</section>
 </div>
