--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -251,6 +251,45 @@
 			<button type="submit" class="btn btn-primary">Download - 75mb</button>
 		</div>
 	</section>
+	<section class="join-cummunity">
+		<h4>join the community</h4>
+		<h5>hello@buttondownstudios.com</h5>
+		<ul>
+			<li>
+				<a href="#">
+					<img src="/static/app/assets/svgs/fb.svg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="/static/app/assets/svgs/fb.svg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="/static/app/assets/svgs/fb.svg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="/static/app/assets/svgs/fb.svg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="/static/app/assets/svgs/fb.svg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="/static/app/assets/svgs/fb.svg" alt="">
+				</a>
+			</li>
+		</ul>
+		<span>
+			Copyright © 2023 Button Down Studios - All rights reserved
+		</span>
+	</section>
 </div>
 
 {% endblock %}
