--- a/game_1630/app/static/app/style.css
+++ b/game_1630/app/static/app/style.css
@@ -513,3 +513,67 @@ section.Screenshots, section.artworks {
 	font-size: 0.875rem;
 	color: var(--textPrimary);
 }
+
+/* modal style  */
+
+.modal-dialog {
+	max-width: 37.5rem;
+}
+.modal .modal-content {
+	position: relative;
+	border-radius: 8px;
+	border: 0;
+	padding: 1.875rem 5rem;
+}
+.modal .modal-content .btn-close{
+	position: absolute;
+	top: 24px;
+	right: 24px;
+	box-shadow: none;
+	outline: none;
+}
+.modal .modal-body {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.modal .modal-body h3 {
+	font-size: 1.75rem;
+	font-weight: 500;
+	color: var(--textPrimary);
+	margin: 1.5rem 0;
+}
+.modal .modal-body p {
+	font-size: 1rem;
+	color: var(--textPrimary);
+	margin-bottom: 2rem;
+	text-align: center;
+}
+.modal .modal-body form {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+}
+.modal .modal-body .form-group {
+	margin-bottom: 2rem;
+	width: 100%;
+}
+.modal .modal-body .form-control {
+	padding: 0.8125rem 2.5rem;
+	width: 100%;
+	border-radius: 40px;
+	background-color: #fff;
+	font-size: 0.875rem;
+	color: rgba(31, 31, 31, 0.6);;
+	border: 1px solid var(--primary);
+	outline: none;
+}
+.modal .modal-body .form-group .form-control::placeholder {
+	text-align: center;
+}
+.modal .modal-body form .btn{
+	padding: 0.5625rem;
+	width: 11.25rem;
+}
