--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -4,7 +4,7 @@
 	<div class="banner">
 		<div class="nav-bar">
 			<div class="logo">
-				<img src="/static/app/assets/svgs/logo.svg" alt="" />
+				<img src="{% static "/app/assets/svgs/logo.svg" %}" alt="" />
 			</div>
 			<ul>
 				<li><a href="#">Kickstarter</a></li>
@@ -20,7 +20,7 @@
 				Become a military mastermind!
 				<span>Command musketeers, pikemen, cannons, and a variety of special units on the battlefield.</span>
 			</p>
-			<a href="#" class="btn btn-secondary">
+			<a href="https://www.youtube.com/watch?v=vmbEyrHarnY&ab_channel=1630ThirtyYears%27War" target="_blank" class="btn btn-secondary">
 				<svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path
 						d="M0 12.7045C0 12.2351 0 11.7657 0 11.299C0.0137257 11.2304 0.0356869 11.1645 0.0411771 11.0959C0.140002 9.64094 0.48589 8.24092 1.131 6.93423C3.01142 3.11574 6.05578 0.840014 10.2586 0.134512C10.6017 0.076864 10.9504 0.0439223 11.299 0C11.7684 0 12.2378 0 12.7045 0C12.7649 0.0137257 12.8226 0.0356869 12.883 0.038432C14.5575 0.153728 16.1497 0.584715 17.6128 1.40277C21.5576 3.60986 23.7016 6.98639 23.9816 11.4994C24.1161 13.6653 23.6494 15.7352 22.587 17.6293C20.369 21.5878 16.9677 23.7235 12.4327 23.9816C10.5057 24.0914 8.6472 23.7098 6.91501 22.8615C3.22829 21.0552 0.977271 18.1262 0.189415 14.0881C0.0988251 13.6324 0.0631383 13.1657 0 12.7045ZM11.9935 21.9913C17.5058 21.9968 21.9749 17.5387 21.9913 12.0182C22.0078 6.50324 17.5305 2.01493 12.0073 2.00944C6.49775 2.00395 2.02866 6.46206 2.00944 11.9853C1.99023 17.4948 6.4703 21.9858 11.9935 21.9913Z"
@@ -33,9 +33,10 @@
 				</svg>
 				Watch Trailer
 			</a>
-			<form action="">
+			<form action="" method="post">
+                {% csrf_token %}
 				<div class="form-group">
-					<input type="email" class="form-control" placeholder="Sign up with Email to Receive Updates and Freebies" />
+					<input name="email" type="email" class="form-control" placeholder="Sign up with Email to Receive Updates and Freebies" />
 				</div>
 				<div>
 					<button type="submit" class="btn btn-primary">Sign Me Up!</button>
@@ -44,7 +45,7 @@
 		</div>
 	</div>
 	<section class="kick-starter">
-		<span><img class="img-fluid" src="/static/app/assets/svgs/kick-starter.svg" alt="Kickstarter" /></span>
+		<span><img class="img-fluid" src="{% static "/app/assets/svgs/kick-starter.svg" %}" alt="Kickstarter" /></span>
 		<div class="video-wrapper">
 			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/vmbEyrHarnY"> </iframe>
 		</div>
@@ -62,7 +63,7 @@
 				in the best possible state.</span
 			>
 		</p>
-		<a href="#" class="btn btn-primary">Kickstarter page</a>
+		<a href="https://www.kickstarter.com/projects/buttondownstudios/1332429490?ref=eaq61u&token=0167d897" class="btn btn-primary">Kickstarter page</a>
 	</section>
 	<section class="about-game">
 		<h2>About Game</h2>
@@ -88,12 +89,12 @@
 			</div>
 			<div class="col-md-6">
 				<div class="image">
-					<img src="/static/app/assets/images/17-century-europe.png" alt="17th Century Europe" class="img-fluid" />
+					<img src="{% static 'app/assets/images/about_game/set-in-17th-century.png' %}" alt="17th Century Europe" class="img-fluid" />
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="image">
-					<img src="/static/app/assets/images/17-century-europe.png" alt="17th Century Europe" class="img-fluid" />
+					<img src="{% static 'app/assets/images/about_game/follow-captivating-story.png' %}" alt="17th Century Europe" class="img-fluid" />
 				</div>
 			</div>
 			<div class="col-md-6">
@@ -112,12 +113,12 @@
 			</div>
 			<div class="col-md-6">
 				<div class="image">
-					<img src="/static/app/assets/images/17-century-europe.png" alt="17th Century Europe" class="img-fluid" />
+					<img src="{% static 'app/assets/images/about_game/engage-in.png' %}" alt="17th Century Europe" class="img-fluid" />
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="image">
-					<img src="/static/app/assets/images/17-century-europe.png" alt="17th Century Europe" class="img-fluid" />
+					<img src="{% static 'app/assets/images/about_game/manage-supplies.png' %}" alt="17th Century Europe" class="img-fluid" />
 				</div>
 			</div>
 			<div class="col-md-6">
@@ -134,10 +135,10 @@
 		<p>We have two playable factions in the game, the <span>Imperial Holy Roman Empire</span> and the <span>Swedish Empire</span></p>
 		<div class="faction-card-wrapper">
 			<div class="faction-img">
-				<img class="img-fluid" src="/static/app/assets/svgs/yellow-faction.svg" alt="">
+				<img class="img-fluid" src="{% static "/app/assets/svgs/yellow-faction.svg" %}" alt="">
 			</div>
 			<div class="faction-img">
-				<img class="img-fluid" src="/static/app/assets/svgs/blue-faction.svg" alt="">
+				<img class="img-fluid" src="{% static "/app/assets/svgs/blue-faction.svg" %}" alt="">
 			</div>
 		</div>
 	</section>
@@ -145,30 +146,30 @@
 		<h3>Screenshots</h3>
 		<div class="images-wrapper">
 			<div class="image">
-				<img src="/static/app/assets/images/ss-1.png" alt="">
+				<img src="{% static "/app/assets/images/ss-1.png" %}" alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/ss-2.png" alt="">
+				<img src="{% static "/app/assets/images/ss-2.png" %}" alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/ss-1.png" alt="">
+				<img src={% static "/app/assets/images/ss-1.png" %} alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/ss-2.png" alt="">
+				<img src={% static "/app/assets/images/ss-2.png" %} alt="">
 			</div>
 		</div>
 		<div class="images-wrapper">
 			<div class="image">
-				<img src="/static/app/assets/images/ss-1.png" alt="">
+				<img src="{% static "/app/assets/images/ss-1.png" %}" alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/ss-2.png" alt="">
+				<img src="{% static "/app/assets/images/ss-2.png" %}" alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/ss-1.png" alt="">
+				<img src="{% static "/app/assets/images/ss-1.png" %}" alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/ss-2.png" alt="">
+				<img src="{% static "/app/assets/images/ss-2.png" %}" alt="">
 			</div>
 		</div>
 	</section>
@@ -176,30 +177,30 @@
 		<h3>Artworks</h3>
 		<div class="images-wrapper">
 			<div class="image">
-				<img src="/static/app/assets/images/artwork-1.png" alt="">
+				<img src="{% static "/app/assets/images/artwork-1.png" %}" alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/artwork-2.png" alt="">
+				<img src="{% static "/app/assets/images/artwork-2.png" %}" alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/artwork-1.png" alt="">
+				<img src="{% static "/app/assets/images/artwork-1.png" %}" alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/artwork-2.png" alt="">
+				<img src="{% static "/app/assets/images/artwork-2.png" %}" alt="">
 			</div>
 		</div>
 		<div class="images-wrapper">
 			<div class="image">
-				<img src="/static/app/assets/images/artwork-1.png" alt="">
+				<img src="{% static "/app/assets/images/artwork-1.png" %}" alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/artwork-2.png" alt="">
+				<img src="{% static "/app/assets/images/artwork-2.png" %}" alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/artwork-1.png" alt="">
+				<img src="{% static "/app/assets/images/artwork-1.png" %}" alt="">
 			</div>
 			<div class="image">
-				<img src="/static/app/assets/images/artwork-2.png" alt="">
+				<img src="{% static "/app/assets/images/artwork-2.png" %}" alt="">
 			</div>
 		</div>
 	</section>
@@ -237,8 +238,9 @@
 		<h3>Newsletter</h3>
 		<p>First 100 subscribers get free access to the 1630 - The Thirty Years’ War closed beta tests.</p>
 		<form action="">
+            {% csrf_token %}
 			<div class="form-group">
-				<input type="email" class="form-control" placeholder="Email address" />
+				<input name="email" type="email" class="form-control" placeholder="Email address" />
 			</div>
 			<div>
 				<button type="submit" class="btn btn-primary">Subscribe</button>
@@ -257,32 +259,32 @@
 		<ul>
 			<li>
 				<a href="#">
-					<img src="/static/app/assets/svgs/fb.svg" alt="">
+					<img src="{% static "/app/assets/svgs/fb.svg" %}" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="/static/app/assets/svgs/fb.svg" alt="">
+					<img src="{% static "/app/assets/svgs/tiktok.svg" %}" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="/static/app/assets/svgs/fb.svg" alt="">
+					<img src="{% static "/app/assets/svgs/discord.svg" %}" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="/static/app/assets/svgs/fb.svg" alt="">
+					<img src="{% static "/app/assets/svgs/instagram.svg" %}" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="/static/app/assets/svgs/fb.svg" alt="">
+					<img src="{% static "/app/assets/svgs/youtube.svg" %}" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="/static/app/assets/svgs/fb.svg" alt="">
+					<img src="{% static "/app/assets/svgs/twitter.svg" %}" alt="">
 				</a>
 			</li>
 		</ul>
@@ -302,13 +304,14 @@
 			<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       <div class="modal-body">
 				<div class="image">
-					<img src="/static/app/assets/images/notification.png" alt="">
+					<img src="{% static "/app/assets/images/notification.png" %}" alt="">
 				</div>
 				<h3>Subscribe to our newsletter</h3>
 				<p>First 100 subscribers get free access to the 1630 - The Thirty Years’ War closed beta tests</p>
-				<form action="">
+				<form action="" method="post">
+                    {% csrf_token %}
 					<div class="form-group">
-						<input type="email" class="form-control" placeholder="Your Email" />
+						<input name="email" type="email" class="form-control" placeholder="Your Email" />
 					</div>
 					<div>
 						<button type="submit" class="btn btn-primary">Subscribe</button>
