link and banner height update

--- a/game_1630/app/static/app/style.css
+++ b/game_1630/app/static/app/style.css
@@ -55,6 +55,7 @@ p {
 	background-image: url('/static/app/assets/images/banner.png');
 	background-repeat: no-repeat;
 	background-size: cover;
+	height: 100vh;
 }
 .about .banner .nav-bar {
 	display: -webkit-box;
