--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -7,11 +7,11 @@
 				<img src="{% static "/app/assets/svgs/logo.svg" %}" alt="" />
 			</div>
 			<ul>
-				<li><a href="#">Kickstarter</a></li>
-				<li><a href="#" class="active">About</a></li>
-				<li><a href="#">Factions</a></li>
-				<li><a href="#">Media</a></li>
-				<li><a href="#">Press Kit</a></li>
+				<li><a href="#kickStarter">Kickstarter</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#faction">Factions</a></li>
+				<li><a href="#media">Media</a></li>
+				<li><a href="#pressKit">Press Kit</a></li>
 			</ul>
 		</div>
 		<div class="content">
@@ -34,7 +34,7 @@
 				Watch Trailer
 			</a>
 			<form action="" method="post">
-                {% csrf_token %}
+					{% csrf_token %}
 				<div class="form-group">
 					<input name="email" type="email" class="form-control" placeholder="Sign up with Email to Receive Updates and Freebies" />
 				</div>
@@ -44,7 +44,7 @@
 			</form>
 		</div>
 	</div>
-	<section class="kick-starter">
+	<section class="kick-starter" id="kickStarter">
 		<span><img class="img-fluid" src="{% static "/app/assets/svgs/kick-starter.svg" %}" alt="Kickstarter" /></span>
 		<div class="video-wrapper">
 			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/vmbEyrHarnY"> </iframe>
@@ -65,7 +65,7 @@
 		</p>
 		<a href="https://www.kickstarter.com/projects/buttondownstudios/1332429490?ref=eaq61u&token=0167d897" class="btn btn-primary">Kickstarter page</a>
 	</section>
-	<section class="about-game">
+	<section class="about-game" id="about">
 		<h2>About Game</h2>
 		<p>
 			1630 - The Thirty Years' War is a thrilling and immersive real-time strategy game. Step into the shoes of a commander during one of
@@ -130,7 +130,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="faction">
+	<section class="faction" id="faction">
 		<h3>Factions</h3>
 		<p>We have two playable factions in the game, the <span>Imperial Holy Roman Empire</span> and the <span>Swedish Empire</span></p>
 		<div class="faction-card-wrapper">
@@ -173,7 +173,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="artworks">
+	<section class="artworks" id="media">
 		<h3>Artworks</h3>
 		<div class="images-wrapper">
 			<div class="image">
@@ -247,7 +247,7 @@
 			</div>
 		</form>
 	</section>
-	<section class="pressKit">
+	<section class="pressKit" id="pressKit">
 		<h3>Press Kit</h3>
 		<div class="text-center">
 			<button type="submit" class="btn btn-primary">Download - 75mb</button>
@@ -292,9 +292,6 @@
 			Copyright © 2023 Button Down Studios - All rights reserved
 		</span>
 	</section>
-	<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newsletterModal">
-		Launch demo modal
-	</button>
 </div>
 
 <!-- Modal -->
