adds theme static and constance socials

--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -258,32 +258,32 @@
 		<h5>hello@buttondownstudios.com</h5>
 		<ul>
 			<li>
-				<a href="#">
+				<a href="{{ facebook_1630_link }}" target="_blank">
 					<img src="{% static "/app/assets/svgs/fb.svg" %}" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="{{ tiktok_1630_link }}" target="_blank">
 					<img src="{% static "/app/assets/svgs/tiktok.svg" %}" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="{{ discord_1630_link }}" target="_blank">
 					<img src="{% static "/app/assets/svgs/discord.svg" %}" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="{{ instagram_1630_link }}" target="_blank">
 					<img src="{% static "/app/assets/svgs/instagram.svg" %}" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="{{ youtube_1630_link }}" target="_blank">
 					<img src="{% static "/app/assets/svgs/youtube.svg" %}" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="{{ twitter_1630_link }}" target="_blank">
 					<img src="{% static "/app/assets/svgs/twitter.svg" %}" alt="">
 				</a>
 			</li>
