updates content and audio

--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -83,8 +83,7 @@
 			<div class="col-md-6">
 				<h3>Set in 17th Century Europe</h3>
 				<p>
-					Experience this major conflict in European history, set within the Holy Roman Empire. Explore the beautiful landscapes and cities
-					of Germany and Austria in varying light and weather conditions.
+					Experience this major conflict in European history, set within the Holy Roman Empire. Explore the beautiful landscapes and cities of Germany and Austria in varying light and weather conditions..
 				</p>
 			</div>
 			<div class="col-md-6">
@@ -98,17 +97,15 @@
 				</div>
 			</div>
 			<div class="col-md-6">
-				<h3>Set in 17th Century Europe</h3>
+				<h3>Follow a Captivating Story</h3>
 				<p>
-					Experience this major conflict in European history, set within the Holy Roman Empire. Explore the beautiful landscapes and cities
-					of Germany and Austria in varying light and weather conditions.
+					Experience key battles and make strategic decisions that impact the outcome of the historical campaign. Side missions within the main campaign give a view into the culture, society, morality and strife of the general populace.
 				</p>
 			</div>
 			<div class="col-md-6">
-				<h3>Set in 17th Century Europe</h3>
+				<h3>Engage in Pike and Shot Warfare</h3>
 				<p>
-					Experience this major conflict in European history, set within the Holy Roman Empire. Explore the beautiful landscapes and cities
-					of Germany and Austria in varying light and weather conditions.
+					Lead your soldiers in battles, using infantry armed with pikes and muskets, cannons for destroying enemy fortifications and cavalry for chasing down retreating enemy troops.
 				</p>
 			</div>
 			<div class="col-md-6">
@@ -122,10 +119,9 @@
 				</div>
 			</div>
 			<div class="col-md-6">
-				<h3>Set in 17th Century Europe</h3>
+				<h3>Manage your Supplies</h3>
 				<p>
-					Experience this major conflict in European history, set within the Holy Roman Empire. Explore the beautiful landscapes and cities
-					of Germany and Austria in varying light and weather conditions.
+					Organize your armies with different units, each with its own strengths and weaknesses. Units cost gold to hire, consumes food regularly. You must live off the land and maintain ample stores of supply for your army.
 				</p>
 			</div>
 		</div>
