--- a/game_1630/app/static/app/style.css
+++ b/game_1630/app/static/app/style.css
@@ -52,7 +52,7 @@ p {
 	opacity: 0.8;
 }
 .about .banner {
-	background-image: url('/django-static/app/assets/images/banner.png');
+	background-image: url('./assets/images/banner.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100vh;
@@ -64,10 +64,8 @@ p {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
+	justify-content: space-between;
 	padding: 2.5rem 4.375rem;
-}
-.about .banner .nav-bar .logo {
-	margin-right: 6.875rem;
 }
 .about .banner .nav-bar ul {
 	list-style: none;
@@ -256,7 +254,10 @@ section.faction p span {
 .faction .faction-card-wrapper {
 	display: flex;
 	align-items: flex-start;
-	justify-content: space-between;
+	justify-content: center;
+}
+.faction .faction-card-wrapper .faction-img:first-child {
+	margin-right: 3.375rem;
 }
 
 .faction .faction-card-wrapper .card p:not(:last-child) {
@@ -581,10 +582,79 @@ section.Screenshots, section.artworks {
 	width: 11.25rem;
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1500px) {
+	p {
+		font-size: 24px !important;
+	}
+	h2, h3 {
+		font-size: 4rem !important;
+	}
 	section {
-		max-width: 84.375rem;
+		max-width: 84.0625rem;
 		margin-left: auto !important;
 		margin-right: auto !important;
+	}
+	.about .banner .nav-bar {
+		padding: 5rem 4.375rem;
+		padding-bottom: 0;
+	}
+	.about .banner .nav-bar .logo {
+		transform: scale(1.5);
+	}
+	.about .banner .nav-bar ul li a {
+		font-size: 2rem;
+	}
+	.about .banner .content h1 {
+		font-size: 4.75rem;
+		margin-bottom: 1.5rem;
+	}
+	.about .banner .content p {
+		margin-bottom: 5rem;
+	}
+	.btn {
+		font-size: 1.5rem;
+		width: 21.875rem;
+		height: 5.625rem;
+	}
+	.btn svg {
+		transform: scale(1.3);
+		margin-right: 1.5rem;
+	}
+	.about .banner .content form .form-group {
+		margin-bottom: 2.5rem;
+		width: 84.125rem;
+	}
+	.about .banner .content form .form-group .form-control {
+		font-size: 1.5rem;
+		height: 5.625rem;
+	}
+	.about section.about-game .story h3 {
+		font-size: 2.625rem !important;
+	}
+	.join-cummunity h4 {
+		font-size: 2.625rem;
+	}
+	.join-cummunity h5 {
+		font-size: 1.5rem;
+	}
+	.join-cummunity span {
+		font-size: 1.125rem;
+	}
+	.newsletter p {
+		max-width: 67.125rem;
+		margin-bottom: 5rem;
+	}
+	.newsletter form .form-group {
+		width: 67.125rem;
+	}
+	.newsletter form .form-group .form-control {
+		height: 5.625rem;
+		font-size: 1.5rem;
+	}
+	.about section.about-game .story h3 {
+		margin-bottom: 2rem;
+	}
+	.about section.about-game .story p {
+		line-height: 2.625rem;
 	}
 }
