--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -13,6 +13,7 @@
 				<li><a href="#media">Media</a></li>
 				<li><a href="#pressKit">Press Kit</a></li>
 			</ul>
+			<span></span>
 		</div>
 		<div class="content">
 			<h1>A Nostalgic Real-Time Strategy Game</h1>
