--- a/game_1630/templates/app/base.html
+++ b/game_1630/templates/app/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>1630 - Thirty Years War</title>
+		<title>1630 - The Thirty Years' War</title>
 
 		<link rel="shortcut icon" type="image/png" href="{% static 'app/favicon.ico' %}" />
 		<link
