--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -234,7 +234,7 @@
 	<section class="newsletter">
 		<h3>Newsletter</h3>
 		<p>First 100 subscribers get free access to the 1630 - The Thirty Years’ War closed beta tests.</p>
-		<form action="">
+		<form action="" method="post">
             {% csrf_token %}
 			<div class="form-group">
 				<input name="email" type="email" class="form-control" placeholder="Email address" />
