makes better for mobile

--- a/game_1630/templates/app/email_newsletter.html
+++ b/game_1630/templates/app/email_newsletter.html
@@ -4,6 +4,6 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    Thanks for subscribing!
+    Thanks for subscribing! We promise not to spam.
 </body>
 </html>
