--- a/game_1630/app/static/app/style.css
+++ b/game_1630/app/static/app/style.css
@@ -658,3 +658,28 @@ section.Screenshots, section.artworks {
 		line-height: 2.625rem;
 	}
 }
+
+@media screen and (max-device-width: 500px) {
+	p {
+		font-size: 18px !important;
+	}
+	.content h1 {
+		margin-top: 200px !important;
+	}
+	.content p {
+		margin-top: 50px !important;
+		font-size: 20px;
+	}
+	.content a {
+		margin-top: 100px !important;
+		font-size: 20px !important;
+	}
+	.content input {
+		margin-top: 100px !important;
+	}
+	.about-game img{
+		height: 250px !important;
+		width: 400px !important;
+	}
+
+}
