--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -50,6 +50,9 @@
         <section class="kick-starter" id="kickStarter">
             <span><img class="img-fluid" src="{% static "/app/assets/svgs/kick-starter.svg" %}"
                        alt="Kickstarter"/></span>
+            <div class="coming-soon-svg">
+                <img src="{% static 'app/assets/svgs/coming-soon.svg' %}" alt="coming-soon">
+            </div>
             <div class="video-wrapper">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/vmbEyrHarnY"></iframe>
             </div>
@@ -67,7 +70,7 @@
 				in the best possible state.</span
                 >
             </p>
-            <a href="https://www.kickstarter.com/projects/buttondownstudios/1332429490?ref=eaq61u&token=0167d897"
+            <a href="https://www.kickstarter.com/projects/buttondownstudios/1332429490?ref=eaq61u&token=0167d897" target="_blank"
                class="btn btn-primary">Kickstarter page</a>
         </section>
         <section class="about-game" id="about">
@@ -170,45 +173,45 @@
             <h3>Screenshots</h3>
             <div class="images-wrapper">
                 <div class="image">
-                    <a href="{% static "/app/assets/images/ss-1.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/ss-1.png" %}" alt="">
+                    <a href="{% static "/app/assets/screenshots/ss1.jpg" %}" target="_blank">
+                        <img src="{% static "/app/assets/screenshots/ss1-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/ss-2.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/ss-2.png" %}" alt="">
+                    <a href="{% static "/app/assets/screenshots/ss2.jpg" %}" target="_blank">
+                        <img src="{% static "/app/assets/screenshots/ss2-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/ss-1.png" %}" target="_blank">
-                        <img src={% static "/app/assets/images/ss-1.png" %} alt="">
+                    <a href="{% static "/app/assets/screenshots/ss3.png" %}" target="_blank">
+                        <img src={% static "/app/assets/screenshots/ss3-low.png" %} alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/ss-2.png" %}" target="_blank">
-                        <img src={% static "/app/assets/images/ss-2.png" %} alt="">
+                    <a href="{% static "/app/assets/screenshots/ss4.png" %}" target="_blank">
+                        <img src={% static "/app/assets/screenshots/ss4-low.png" %} alt="">
                     </a>
                 </div>
             </div>
             <div class="images-wrapper">
                 <div class="image">
-                    <a href="{% static "/app/assets/images/ss-1.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/ss-1.png" %}" alt="">
+                    <a href="{% static "/app/assets/screenshots/ss5.png" %}" target="_blank">
+                        <img src="{% static "/app/assets/screenshots/ss5-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/ss-2.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/ss-2.png" %}" alt="">
+                    <a href="{% static "/app/assets/screenshots/ss6.png" %}" target="_blank">
+                        <img src="{% static "/app/assets/screenshots/ss6-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/ss-1.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/ss-1.png" %}" alt="">
+                    <a href="{% static "/app/assets/screenshots/ss7.jpg" %}" target="_blank">
+                        <img src="{% static "/app/assets/screenshots/ss7-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/ss-2.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/ss-2.png" %}" alt="">
+                    <a href="{% static "/app/assets/screenshots/ss8.jpg" %}" target="_blank">
+                        <img src="{% static "/app/assets/screenshots/ss8-low.png" %}" alt="">
                     </a>
                 </div>
             </div>
@@ -217,45 +220,45 @@
             <h3>Artworks</h3>
             <div class="images-wrapper">
                 <div class="image">
-                    <a href="{% static "/app/assets/images/artwork-1.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/artwork-1.png" %}" alt="">
+                    <a href="{% static "/app/assets/artworks/aa1.jpg" %}" target="_blank">
+                        <img src="{% static "/app/assets/artworks/aa1-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/artwork-2.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/artwork-2.png" %}" alt="">
+                    <a href="{% static "/app/assets/artworks/aa2.jpg" %}" target="_blank">
+                        <img src="{% static "/app/assets/artworks/aa2-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/artwork-1.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/artwork-1.png" %}" alt="">
+                    <a href="{% static "/app/assets/artworks/aa3.jpg" %}" target="_blank">
+                        <img src="{% static "/app/assets/artworks/aa3-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/artwork-2.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/artwork-2.png" %}" alt="">
+                    <a href="{% static "/app/assets/artworks/aa4.jpg" %}" target="_blank">
+                        <img src="{% static "/app/assets/artworks/aa4-low.png" %}" alt="">
                     </a>
                 </div>
             </div>
             <div class="images-wrapper">
                 <div class="image">
-                    <a href="{% static "/app/assets/images/artwork-1.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/artwork-1.png" %}" alt="">
+                    <a href="{% static "/app/assets/artworks/aa5.png" %}" target="_blank">
+                        <img src="{% static "/app/assets/artworks/aa5-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/artwork-2.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/artwork-2.png" %}" alt="">
+                    <a href="{% static "/app/assets/artworks/aa6.jpg" %}" target="_blank">
+                        <img src="{% static "/app/assets/artworks/aa6-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/artwork-1.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/artwork-1.png" %}" alt="">
+                    <a href="{% static "/app/assets/artworks/aa7.jpg" %}" target="_blank">
+                        <img src="{% static "/app/assets/artworks/aa7-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/images/artwork-2.png" %}" target="_blank">
-                        <img src="{% static "/app/assets/images/artwork-2.png" %}" alt="">
+                    <a href="{% static "/app/assets/artworks/aa8.jpg" %}" target="_blank">
+                        <img width="179px" src="{% static "/app/assets/artworks/aa8-loww.png" %}" alt="">
                     </a>
                 </div>
             </div>
@@ -345,7 +348,7 @@
                 </li>
             </ul>
             <span>
-			Copyright © 2023 Button Down Studios - All rights reserved
+			Copyright © 2023 Button Down Studios LLC & Conquista Games UG. Financially supported by the FFF Bayern & BMVI. All rights reserved.
 		</span>
         </section>
     </div>
