updates email content

--- a/game_1630/templates/app/email_newsletter.html
+++ b/game_1630/templates/app/email_newsletter.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
 </head>
+
 <body>
-    Thanks for subscribing! We promise not to spam.
+
+    <p>Dear Subscriber,</p>
+    <p>Thank you for subscribing to 1630: The Thirty Years’ War! We are thrilled to have you as part of
+        our community and look forward to sharing the latest news, updates, and insights about the
+        game with you.</p>
+    <p>We are always on the lookout to grow our community and to share with our subscribers, We
+        also encourage you to share our newsletter with your friends and other gamers in your network,
+        as we aim to build a vibrant and engaged community of Real-time Strategy gamers.</p>
+    <p>Once again, welcome to 1630! We hope you enjoy our newsletters and look forward to hearing
+        from you soon.</p>
+    <p>Best Regards </p>
+    <p>Team 1630</p>
+
 </body>
+
 </html>
