--- a/game_1630/app/static/app/style.css
+++ b/game_1630/app/static/app/style.css
@@ -585,11 +585,11 @@ section.Screenshots, section.artworks {
 	width: 11.25rem;
 }
 
-@media screen and (min-width: 1900px) {
-	.about .banner .content h1 {
-		margin-top: 200px;
-	}
-}
+/*@media screen and (min-width: 1900px) {*/
+/*	.about .banner .content h1 {*/
+/*		margin-top: 200px;*/
+/*	}*/
+/*}*/
 
 @media screen and (min-width: 1500px) {
 	p {
