removes click on about us images

--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -99,19 +99,19 @@
                 </div>
                 <div class="col-md-6">
                     <div class="image">
-                        <a href="{% static 'app/assets/images/about_game/set-in-17th-century.png' %}" target="_blank">
+{#                        <a href="{% static 'app/assets/images/about_game/set-in-17th-century.png' %}" target="_blank">#}
                             <img src="{% static 'app/assets/images/about_game/set-in-17th-century.png' %}"
                                  alt="17th Century Europe" class="img-fluid"/>
-                        </a>
+{#                        </a>#}
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="image">
-                        <a href="{% static 'app/assets/images/about_game/follow-captivating-story.png' %}"
+{#                        <a href="{% static 'app/assets/images/about_game/follow-captivating-story.png' %}"#}
                            target="_blank">
                             <img src="{% static 'app/assets/images/about_game/follow-captivating-story.png' %}"
                                  alt="17th Century Europe" class="img-fluid"/>
-                        </a>
+{#                        </a>#}
 
                     </div>
                 </div>
@@ -132,18 +132,18 @@
                 </div>
                 <div class="col-md-6">
                     <div class="image">
-                        <a href="{% static 'app/assets/images/about_game/engage-in.png' %}" target="_blank">
+{#                        <a href="{% static 'app/assets/images/about_game/engage-in.png' %}" target="_blank">#}
                             <img src="{% static 'app/assets/images/about_game/engage-in.png' %}"
                                  alt="17th Century Europe" class="img-fluid"/>
-                        </a>
+{#                        </a>#}
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="image">
-                        <a href="{% static 'app/assets/images/about_game/manage-supplies.png' %}" target="_blank">
+{#                        <a href="{% static 'app/assets/images/about_game/manage-supplies.png' %}" target="_blank">#}
                             <img src="{% static 'app/assets/images/about_game/manage-supplies.png' %}"
                                  alt="17th Century Europe" class="img-fluid"/>
-                        </a>
+{#                        </a>#}
                     </div>
                 </div>
                 <div class="col-md-6">
