--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -257,8 +257,8 @@
                     </a>
                 </div>
                 <div class="image">
-                    <a href="{% static "/app/assets/artworks/aa8.jpg" %}" target="_blank">
-                        <img width="179px" src="{% static "/app/assets/artworks/aa8-loww.png" %}" alt="">
+                    <a href="{% static "/app/assets/artworks/aa8.png" %}" target="_blank">
+                        <img width="179px" src="{% static "/app/assets/artworks/aa8-low.png" %}" alt="">
                     </a>
                 </div>
             </div>
