adds google analytics

--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -1,4 +1,13 @@
 {% extends "app/base.html" %} {% load static %} {% block page %}
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-32VDW9VNLG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-32VDW9VNLG');
+    </script>
 
     <div class="about">
         <div class="banner">
