traget blank in press kit

--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -319,7 +319,7 @@
         <section class="pressKit" id="pressKit">
             <h3>Press Kit</h3>
             <div class="text-center">
-                <a href="{{ press_kit_link }}">
+                <a href="{{ press_kit_link }}" target="_blank">
                     <button type="submit" class="btn btn-primary">{{ press_kit_button_text }}</button>
                 </a>
             </div>
